Update README and pkgdown

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,11 +18,21 @@ knitr::opts_chunk$set(
 
 **Github**: [https://github.com/benben-miao/TOmicsVis/](https://github.com/benben-miao/TOmicsVis/)
 
+**Latest version:** `devtools::install_github("benben-miao/TOmicsVis")`
+
+**CRAN**: [https://cloud.r-project.org/web/packages/TOmicsVis/](https://cloud.r-project.org/web/packages/TOmicsVis/)
+
+**Stable version:** `install.packages("TOmicsVis")`
+
 **Website**: [https://benben-miao.github.io/TOmicsVis/](https://benben-miao.github.io/TOmicsVis/)
 
-**Author**: [benben-miao github](https://github.com/benben-miao)
+**OmicsSuite**: [Omics Suite Github: https://github.com/omicssuite/](https://github.com/omicssuite/)
 
-**BioSciTools**: [Biology Science Tools](https://github.com/BioSciTools/BioSciTools.github.io)
+**Authors**: 
+
+- [benben-miao Github: https://github.com/benben-miao/](https://github.com/benben-miao/)
+
+- [dongwei1220 Github: https://github.com/dongwei1220/](https://github.com/dongwei1220/)
 
 ## 2. Install package
 ```{r}
@@ -120,6 +130,38 @@ Get help using command `?TOmicsVis::pca_plot` or reference page [https://benben-
 # ?TOmicsVis::pca_plot
 ```
 
+#### 3.1.4 dendro_plot
+Dendrograms for multiple samples/groups clustering.
+```{r dendro_plot, fig.width=10.00, fig.height=6.18}
+# 1. Load example datasets
+data(gene_exp)
+
+# 2. Run plot function
+dendro_plot(
+  gene_exp,
+  dist_method = "euclidean",
+  hc_method = "average",
+  tree_type = "rectangle",
+  k_num = 3,
+  palette = "npg",
+  color_labels_by_k = TRUE,
+  horiz = TRUE,
+  label_size = 0.8,
+  line_width = 0.7,
+  rect = TRUE,
+  rect_fill = TRUE,
+  title = "Cluster Dendrogram",
+  xlab = "",
+  ylab = "Height"
+)
+```
+
+Get help using command `?TOmicsVis::dendro_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/dendro_plot.html](https://benben-miao.github.io/TOmicsVis/reference/dendro_plot.html).
+```{r}
+# Get help with command in R console.
+# ?TOmicsVis::dendro_plot
+```
+
 ### 3.2 Traits Analysis
 #### 3.2.1 box_plot
 Box plot support two levels and multiple groups with P value.
@@ -130,7 +172,7 @@ data(box_data)
 # 2. Run box_plot plot function
 box_plot(
   box_data,
-  test_method = "wilcox.test",
+  test_method = "t.test",
   test_label = "p.format",
   notch = TRUE,
   group_level = "Three_Column",
@@ -160,7 +202,7 @@ data(box_data)
 # 2. Run violin_plot plot function
 violin_plot(
   box_data,
-  test_method = "wilcox.test",
+  test_method = "t.test",
   test_label = "p.format",
   group_level = "Three_Column",
   violin_orientation = "vertical",
@@ -265,7 +307,32 @@ Get help using command `?TOmicsVis::venn_plot` or reference page [https://benben
 # ?TOmicsVis::venn_plot
 ```
 
-#### 3.3.2 circos_heatmap
+#### 3.3.2 flower_plot
+Venn plot for stat common and unique gene among multiple sets.
+```{r flower_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
+# 1. Load example datasets
+data(venn_data)
+
+# 2. Run plot function
+flower_plot(
+  venn_data,
+  angle = 90,
+  a = 0.5,
+  b = 2,
+  r = 1,
+  ellipse_col_pal = "Spectral",
+  circle_col = "white",
+  label_text_cex = 1
+)
+```
+
+Get help using command `?TOmicsVis::flower_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/flower_plot.html](https://benben-miao.github.io/TOmicsVis/reference/flower_plot.html).
+```{r}
+# Get help with command in R console.
+# ?TOmicsVis::flower_plot
+```
+
+#### 3.3.3 circos_heatmap
 Circos heatmap plot for visualizing gene expressing in multiple samples.
 ```{r circos_heatmap, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load circos_heatmap_data example datasets
@@ -291,7 +358,7 @@ Get help using command `?TOmicsVis::circos_heatmap` or reference page [https://b
 # ?TOmicsVis::circos_heatmap
 ```
 
-#### 3.3.3 volcano_plot
+#### 3.3.4 volcano_plot
 Volcano plot for visualizing differentailly expressed genes.
 ```{r volcano_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load deg_data example datasets
@@ -324,7 +391,7 @@ Get help using command `?TOmicsVis::volcano_plot` or reference page [https://ben
 # ?TOmicsVis::volcano_plot
 ```
 
-#### 3.3.4 ma_plot
+#### 3.3.5 ma_plot
 MversusA plot for visualizing differentially expressed genes.
 ```{r ma_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load deg_data example datasets
@@ -356,7 +423,7 @@ Get help using command `?TOmicsVis::ma_plot` or reference page [https://benben-m
 # ?TOmicsVis::ma_plot
 ```
 
-#### 3.3.5 heatmap_group
+#### 3.3.6 heatmap_group
 Heatmap group for visualizing grouped gene expression data.
 ```{r heatmap_group, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
@@ -364,22 +431,17 @@ data(heatmap_group_data)
 head(heatmap_group_data)
 
 # 2. Run heatmap_group plot function
-ma_plot(
-  deg_data2,
-  foldchange = 2,
-  fdr_value = 0.05,
-  point_size = 0.5,
-  color_up = "#FF0000",
-  color_down = "#008800",
-  color_alpha = 0.5,
-  top_method = "fc",
-  top_num = 20,
-  label_size = 8,
-  label_box = TRUE,
-  title = "Group1 -versus- Group2",
-  xlab = "Log2 mean expression",
-  ylab = "Log2 fold change",
-  ggTheme = "theme_minimal"
+heatmap_group(
+  data = heatmap_group_data,
+  scale_data = "none",
+  clust_method = "complete",
+  border_show = TRUE,
+  value_show = TRUE,
+  low_color = "#00880088",
+  mid_color = "#ffffff",
+  high_color = "#ff000088",
+  na_color = "#ff8800",
+  x_angle = 45
 )
 ```
 
@@ -422,7 +484,56 @@ Get help using command `?TOmicsVis::trend_plot` or reference page [https://benbe
 # ?TOmicsVis::trend_plot
 ```
 
-#### 3.4.2 wgcna_pipeline
+#### 3.4.2 gene_cluster_trend
+Gene cluster trend plot for visualizing gene expression trend profile in multiple samples.
+```{r gene_cluster_trend, warning=FALSE, fig.width=10.00, fig.height=6.18}
+# 1. Load example datasets
+data(gene_cluster_data)
+
+# 2. Run plot function
+gene_cluster_trend(
+  gene_cluster_data,
+  thres = 0.25,
+  min_std = 0.2,
+  palette = "PiYG",
+  cluster_num = 4
+)
+```
+
+Get help using command `?TOmicsVis::gene_cluster_trend` or reference page [https://benben-miao.github.io/TOmicsVis/reference/gene_cluster_trend.html](https://benben-miao.github.io/TOmicsVis/reference/gene_cluster_trend.html).
+```{r}
+# Get help with command in R console.
+# ?TOmicsVis::gene_cluster_trend
+```
+
+#### 3.4.3 gene_rank_plot
+Gene cluster trend plot for visualizing gene expression trend profile in multiple samples.
+```{r gene_rank_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
+# 1. Load example datasets
+data(deg_data)
+
+# 2. Run plot function
+gene_rank_plot(
+  data = deg_data,
+  log2fc = 1,
+  palette = "Spectral",
+  top_n = 10,
+  genes_to_label = NULL,
+  label_size = 5,
+  base_size = 12,
+  title = "Gene ranking dotplot",
+  xlab = "Ranking of differentially expressed genes",
+  ylab = "Log2FoldChange"
+)
+```
+
+Get help using command `?TOmicsVis::gene_rank_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/gene_rank_plot.html](https://benben-miao.github.io/TOmicsVis/reference/gene_rank_plot.html).
+```{r}
+# Get help with command in R console.
+# ?TOmicsVis::gene_rank_plot
+```
+
+#### 3.4.4 wgcna_pipeline
 WGCNA analysis pipeline for RNA-Seq.
 ```{r wgcna_pipeline, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load wgcna_pipeline example datasets
@@ -439,7 +550,7 @@ Get help using command `?TOmicsVis::wgcna_pipeline` or reference page [https://b
 # ?TOmicsVis::wgcna_pipeline
 ```
 
-#### 3.4.3 network_plot
+#### 3.4.5 network_plot
 Network plot for analyzing and visualizing relationship of genes.
 ```{r network_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
@@ -468,6 +579,34 @@ Get help using command `?TOmicsVis::network_plot` or reference page [https://ben
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::network_plot
+```
+
+#### 3.4.6 heatmap_cluster
+Heatmap cluster plot for visualizing clustered gene expression data.
+```{r heatmap_cluster, warning=FALSE, fig.width=10.00, fig.height=6.18}
+# 1. Load example datasets
+data(gene_exp)
+head(gene_exp)
+
+# 2. Run network_plot plot function
+heatmap_cluster(
+  data = gene_exp,
+  dist_method = "euclidean",
+  hc_method = "average",
+  k_num = 5,
+  palette = "Spectral",
+  cluster_pal = "Set1",
+  gaps_col = NULL,
+  angle_col = 45,
+  label_size = 10,
+  base_size = 12
+)
+```
+
+Get help using command `?TOmicsVis::heatmap_cluster` or reference page [https://benben-miao.github.io/TOmicsVis/reference/heatmap_cluster.html](https://benben-miao.github.io/TOmicsVis/reference/heatmap_cluster.html).
+```{r}
+# Get help with command in R console.
+# ?TOmicsVis::heatmap_cluster
 ```
 
 ### 3.5 GO and KEGG Enrichment
