--- a/README.Rmd
+++ b/README.Rmd
@@ -14,8 +14,12 @@ knitr::opts_chunk$set(
 
 # TOmicsVis
 ## 1. Introduction
+#### 1.1 Meta Information
 **TOmicsVis**: TranscriptOmics Visualization.
 
+**Website**: [https://benben-miao.github.io/TOmicsVis/](https://benben-miao.github.io/TOmicsVis/)
+
+#### 1.2 Github and CRAN Install
 **Github**: [https://github.com/benben-miao/TOmicsVis/](https://github.com/benben-miao/TOmicsVis/)
 
 **Latest version:** `devtools::install_github("benben-miao/TOmicsVis")`
@@ -24,8 +28,14 @@ knitr::opts_chunk$set(
 
 **Stable version:** `install.packages("TOmicsVis")`
 
-**Website**: [https://benben-miao.github.io/TOmicsVis/](https://benben-miao.github.io/TOmicsVis/)
+#### 1.3 Articles and Courses
+**Videos Courses:** [https://space.bilibili.com/34105515/channel/series](https://space.bilibili.com/34105515/channel/series)
 
+**Article Introduction:** [全解TOmicsVis完美应用于转录组可视化R包](https://mp.weixin.qq.com/s/g8sRcK_ExlsOFniMWEJnVQ)
+
+**Article Courses:** [TOmicsVis 转录组学R代码分析及可视化视频](https://mp.weixin.qq.com/s/mVXJmHPAnC9J1-zMj7eG7g)
+
+#### 1.4 About and Authors
 **OmicsSuite**: [Omics Suite Github: https://github.com/omicssuite/](https://github.com/omicssuite/)
 
 **Authors**: 
