New version 1.2.3 on CRAN

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,16 +1,14 @@
 ---
-title: "Tutorials"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteIndexEntry{Tutorials}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+output: github_document
 ---
 
-```{r, include = FALSE}
+<!-- README.md is generated from README.Rmd. Please edit that file -->
+
+```{r, echo = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  fig.path = "man/figures/README-"
 )
 ```
 
