--- a/README.Rmd
+++ b/README.Rmd
@@ -13,13 +13,19 @@ knitr::opts_chunk$set(
 ```
 
 # TOmicsVis
+
 ## 1. Introduction
+
 #### 1.1 Meta Information
+
 **TOmicsVis**: TranscriptOmics Visualization.
 
-**Website**: [https://benben-miao.github.io/TOmicsVis/](https://benben-miao.github.io/TOmicsVis/)
+**Website**: <https://benben-miao.github.io/TOmicsVis/>
 
 #### 1.2 Github and CRAN Install
+
+[![](https://cranlogs.r-pkg.org/badges/grand-total/TOmicsVis?color=orange)](https://cran.rstudio.com/web/packages/TOmicsVis/index.html)
+
 **1.2.1 Install required packages from Bioconductor:**
 
 ```{r eval=FALSE}
@@ -28,9 +34,9 @@ install.packages("BiocManager")
 BiocManager::install(c("ComplexHeatmap", "EnhancedVolcano", "clusterProfiler", "enrichplot", "impute", "preprocessCore", "Mfuzz"))
 ```
 
-**1.2.2 Github**: [https://github.com/benben-miao/TOmicsVis/](https://github.com/benben-miao/TOmicsVis/)
+**1.2.2 Github**: <https://github.com/benben-miao/TOmicsVis/>
 
-**Install from Github:** 
+**Install from Github:**
 
 ```{r eval=FALSE}
 install.packages("devtools")
@@ -40,9 +46,9 @@ devtools::install_github("benben-miao/TOmicsVis")
 devtools::install_git("https://gitclone.com/github.com/benben-miao/TOmicsVis.git")
 ```
 
-**1.2.3 CRAN**: [https://cran.r-project.org/package=TOmicsVis](https://cran.r-project.org/package=TOmicsVis)
+**1.2.3 CRAN**: <https://cran.r-project.org/package=TOmicsVis>
 
-**Install from CRAN:** 
+**Install from CRAN:**
 
 ```{r eval=FALSE}
 # Install from CRAN
@@ -50,22 +56,25 @@ install.packages("TOmicsVis")
 ```
 
 #### 1.3 Articles and Courses
-**Videos Courses:** [https://space.bilibili.com/34105515/channel/series](https://space.bilibili.com/34105515/channel/series)
+
+**Videos Courses:** <https://space.bilibili.com/34105515/channel/series>
 
 **Article Introduction:** [全解TOmicsVis完美应用于转录组可视化R包](https://mp.weixin.qq.com/s/g8sRcK_ExlsOFniMWEJnVQ)
 
 **Article Courses:** [TOmicsVis 转录组学R代码分析及可视化视频](https://mp.weixin.qq.com/s/mVXJmHPAnC9J1-zMj7eG7g)
 
 #### 1.4 About and Authors
+
 **OmicsSuite**: [Omics Suite Github: https://github.com/omicssuite/](https://github.com/omicssuite/)
 
-**Authors**: 
+**Authors**:
 
-- [benben-miao Github: https://github.com/benben-miao/](https://github.com/benben-miao/)
+-   [benben-miao Github: https://github.com/benben-miao/](https://github.com/benben-miao/)
 
-- [dongwei1220 Github: https://github.com/dongwei1220/](https://github.com/dongwei1220/)
+-   [dongwei1220 Github: https://github.com/dongwei1220/](https://github.com/dongwei1220/)
 
 ## 2. Libary packages
+
 ```{r}
 # 1. Library TOmicsVis package
 library(TOmicsVis)
@@ -76,9 +85,13 @@ library(ggplot2)
 ```
 
 ## 3. Usage cases
+
 ### 3.1 Samples Statistics
+
 #### 3.1.1 quantile_plot
+
 Quantile plot for visualizing data distribution.
+
 ```{r quantile_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load box_data example datasets
 data(quantile_data)
@@ -99,14 +112,17 @@ quantile_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::quantile_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/quantile_plot.html](https://benben-miao.github.io/TOmicsVis/reference/quantile_plot.html).
+Get help using command `?TOmicsVis::quantile_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/quantile_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::quantile_plot
 ```
 
 #### 3.1.2 corr_heatmap
+
 Correlation Heatmap for samples/groups based on Pearson algorithm.
+
 ```{r corr_heatmap, fig.width=10.00, fig.height=6.18}
 # 1. Load gene_exp example dataset
 data(gene_exp)
@@ -127,14 +143,17 @@ corr_heatmap(
 )
 ```
 
-Get help using command `?TOmicsVis::corr_heatmap` or reference page [https://benben-miao.github.io/TOmicsVis/reference/corr_heatmap.html](https://benben-miao.github.io/TOmicsVis/reference/corr_heatmap.html).
+Get help using command `?TOmicsVis::corr_heatmap` or reference page <https://benben-miao.github.io/TOmicsVis/reference/corr_heatmap.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::corr_heatmap
 ```
 
 #### 3.1.3 pca_plot
+
 PCA dimensional reduction visualization for RNA-Seq.
+
 ```{r pca_plot, fig.width=10.00, fig.height=6.18}
 # 1. Load pca_sample_gene and pca_group_sample example datasets
 data(pca_sample_gene)
@@ -153,14 +172,17 @@ pca_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::pca_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/pca_plot.html](https://benben-miao.github.io/TOmicsVis/reference/pca_plot.html).
+Get help using command `?TOmicsVis::pca_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/pca_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::pca_plot
 ```
 
 #### 3.1.4 dendro_plot
+
 Dendrograms for multiple samples/groups clustering.
+
 ```{r dendro_plot, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(gene_exp)
@@ -185,15 +207,19 @@ dendro_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::dendro_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/dendro_plot.html](https://benben-miao.github.io/TOmicsVis/reference/dendro_plot.html).
+Get help using command `?TOmicsVis::dendro_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/dendro_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::dendro_plot
 ```
 
 ### 3.2 Traits Analysis
+
 #### 3.2.1 box_plot
+
 Box plot support two levels and multiple groups with P value.
+
 ```{r box_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load box_data example datasets
 data(box_data)
@@ -216,14 +242,17 @@ box_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::box_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/box_plot.html](https://benben-miao.github.io/TOmicsVis/reference/box_plot.html).
+Get help using command `?TOmicsVis::box_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/box_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::box_plot
 ```
 
 #### 3.2.2 violin_plot
+
 Violin plot support two levels and multiple groups with P value.
+
 ```{r violin_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load box_data example datasets
 data(box_data)
@@ -247,14 +276,17 @@ violin_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::violin_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/violin_plot.html](https://benben-miao.github.io/TOmicsVis/reference/violin_plot.html).
+Get help using command `?TOmicsVis::violin_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/violin_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::violin_plot
 ```
 
 #### 3.2.3 survival_plot
+
 Survival plot for analyzing and visualizing survival data.
+
 ```{r survival_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load survival_plot example datasets
 data(survival_data)
@@ -277,14 +309,17 @@ survival_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::survival_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/survival_plot.html](https://benben-miao.github.io/TOmicsVis/reference/survival_plot.html).
+Get help using command `?TOmicsVis::survival_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/survival_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::survival_plot
 ```
 
 #### 3.2.4 tsne_plot
+
 TSNE plot for analyzing and visualizing TSNE algorithm.
+
 ```{r tsne_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load tsne_plot example datasets
 data(tsne_data)
@@ -307,15 +342,19 @@ tsne_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::tsne_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/tsne_plot.html](https://benben-miao.github.io/TOmicsVis/reference/tsne_plot.html).
+Get help using command `?TOmicsVis::tsne_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/tsne_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::tsne_plot
 ```
 
 ### 3.3 Differential Expression Analyais
+
 #### 3.3.1 venn_plot
+
 Venn plot for stat common and unique gene among multiple sets.
+
 ```{r venn_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load venn_data example datasets
 data(venn_data)
@@ -330,14 +369,17 @@ venn_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::venn_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/venn_plot.html](https://benben-miao.github.io/TOmicsVis/reference/venn_plot.html).
+Get help using command `?TOmicsVis::venn_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/venn_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::venn_plot
 ```
 
 #### 3.3.2 flower_plot
+
 Venn plot for stat common and unique gene among multiple sets.
+
 ```{r flower_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(venn_data)
@@ -355,14 +397,17 @@ flower_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::flower_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/flower_plot.html](https://benben-miao.github.io/TOmicsVis/reference/flower_plot.html).
+Get help using command `?TOmicsVis::flower_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/flower_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::flower_plot
 ```
 
 #### 3.3.3 circos_heatmap
+
 Circos heatmap plot for visualizing gene expressing in multiple samples.
+
 ```{r circos_heatmap, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load circos_heatmap_data example datasets
 data(circos_heatmap_data)
@@ -381,14 +426,17 @@ circos_heatmap(
 )
 ```
 
-Get help using command `?TOmicsVis::circos_heatmap` or reference page [https://benben-miao.github.io/TOmicsVis/reference/circos_heatmap.html](https://benben-miao.github.io/TOmicsVis/reference/circos_heatmap.html).
+Get help using command `?TOmicsVis::circos_heatmap` or reference page <https://benben-miao.github.io/TOmicsVis/reference/circos_heatmap.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::circos_heatmap
 ```
 
 #### 3.3.4 volcano_plot
+
 Volcano plot for visualizing differentailly expressed genes.
+
 ```{r volcano_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load deg_data example datasets
 data(deg_data)
@@ -414,14 +462,17 @@ volcano_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::volcano_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/volcano_plot.html](https://benben-miao.github.io/TOmicsVis/reference/volcano_plot.html).
+Get help using command `?TOmicsVis::volcano_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/volcano_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::volcano_plot
 ```
 
 #### 3.3.5 ma_plot
+
 MversusA plot for visualizing differentially expressed genes.
+
 ```{r ma_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load deg_data example datasets
 data(deg_data2)
@@ -446,14 +497,17 @@ ma_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::ma_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/ma_plot.html](https://benben-miao.github.io/TOmicsVis/reference/ma_plot.html).
+Get help using command `?TOmicsVis::ma_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/ma_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::ma_plot
 ```
 
 #### 3.3.6 heatmap_group
+
 Heatmap group for visualizing grouped gene expression data.
+
 ```{r heatmap_group, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(heatmap_group_data)
@@ -474,15 +528,19 @@ heatmap_group(
 )
 ```
 
-Get help using command `?TOmicsVis::heatmap_group` or reference page [https://benben-miao.github.io/TOmicsVis/reference/heatmap_group.html](https://benben-miao.github.io/TOmicsVis/reference/heatmap_group.html).
+Get help using command `?TOmicsVis::heatmap_group` or reference page <https://benben-miao.github.io/TOmicsVis/reference/heatmap_group.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::heatmap_group
 ```
 
 ### 3.4 Advanced Analysis
+
 #### 3.4.1 trend_plot
+
 Trend plot for visualizing gene expression trend profile in multiple traits.
+
 ```{r trend_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load chord_data example datasets
 data(trend_data)
@@ -507,14 +565,17 @@ trend_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::trend_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/trend_plot.html](https://benben-miao.github.io/TOmicsVis/reference/trend_plot.html).
+Get help using command `?TOmicsVis::trend_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/trend_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::trend_plot
 ```
 
 #### 3.4.2 gene_cluster_trend
+
 Gene cluster trend plot for visualizing gene expression trend profile in multiple samples.
+
 ```{r gene_cluster_trend, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(gene_cluster_data)
@@ -529,14 +590,17 @@ gene_cluster_trend(
 )
 ```
 
-Get help using command `?TOmicsVis::gene_cluster_trend` or reference page [https://benben-miao.github.io/TOmicsVis/reference/gene_cluster_trend.html](https://benben-miao.github.io/TOmicsVis/reference/gene_cluster_trend.html).
+Get help using command `?TOmicsVis::gene_cluster_trend` or reference page <https://benben-miao.github.io/TOmicsVis/reference/gene_cluster_trend.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::gene_cluster_trend
 ```
 
 #### 3.4.3 gene_rank_plot
+
 Gene cluster trend plot for visualizing gene expression trend profile in multiple samples.
+
 ```{r gene_rank_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(deg_data)
@@ -556,14 +620,17 @@ gene_rank_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::gene_rank_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/gene_rank_plot.html](https://benben-miao.github.io/TOmicsVis/reference/gene_rank_plot.html).
+Get help using command `?TOmicsVis::gene_rank_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/gene_rank_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::gene_rank_plot
 ```
 
 #### 3.4.4 wgcna_pipeline
+
 WGCNA analysis pipeline for RNA-Seq.
+
 ```{r wgcna_pipeline, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load wgcna_pipeline example datasets
 data(wgcna_gene_exp)
@@ -573,14 +640,17 @@ data(wgcna_sample_group)
 # wgcna_pipeline(wgcna_gene_exp, wgcna_sample_group)
 ```
 
-Get help using command `?TOmicsVis::wgcna_pipeline` or reference page [https://benben-miao.github.io/TOmicsVis/reference/wgcna_pipeline.html](https://benben-miao.github.io/TOmicsVis/reference/wgcna_pipeline.html).
+Get help using command `?TOmicsVis::wgcna_pipeline` or reference page <https://benben-miao.github.io/TOmicsVis/reference/wgcna_pipeline.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::wgcna_pipeline
 ```
 
 #### 3.4.5 network_plot
+
 Network plot for analyzing and visualizing relationship of genes.
+
 ```{r network_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(network_data)
@@ -604,14 +674,17 @@ network_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::network_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/network_plot.html](https://benben-miao.github.io/TOmicsVis/reference/network_plot.html).
+Get help using command `?TOmicsVis::network_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/network_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::network_plot
 ```
 
 #### 3.4.6 heatmap_cluster
+
 Heatmap cluster plot for visualizing clustered gene expression data.
+
 ```{r heatmap_cluster, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(gene_exp2)
@@ -633,15 +706,19 @@ heatmap_cluster(
 )
 ```
 
-Get help using command `?TOmicsVis::heatmap_cluster` or reference page [https://benben-miao.github.io/TOmicsVis/reference/heatmap_cluster.html](https://benben-miao.github.io/TOmicsVis/reference/heatmap_cluster.html).
+Get help using command `?TOmicsVis::heatmap_cluster` or reference page <https://benben-miao.github.io/TOmicsVis/reference/heatmap_cluster.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::heatmap_cluster
 ```
 
 ### 3.5 GO and KEGG Enrichment
+
 #### 3.5.1 chord_plot
+
 Chord plot for visualizing the relationships of pathways and genes.
+
 ```{r chord_plot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load chord_data example datasets
 data(chord_data)
@@ -662,14 +739,17 @@ chord_plot(
 )
 ```
 
-Get help using command `?TOmicsVis::chord_plot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/chord_plot.html](https://benben-miao.github.io/TOmicsVis/reference/chord_plot.html).
+Get help using command `?TOmicsVis::chord_plot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/chord_plot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::chord_plot
 ```
 
 #### 3.5.2 go_enrich
+
 GO enrichment analysis based on GO annotation results (None/Exist Reference Genome).
+
 ```{r go_enrich, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(go_anno)
@@ -689,14 +769,17 @@ res <- go_enrich(
 head(res)
 ```
 
-Get help using command `?TOmicsVis::go_enrich` or reference page [https://benben-miao.github.io/TOmicsVis/reference/go_enrich.html](https://benben-miao.github.io/TOmicsVis/reference/go_enrich.html).
+Get help using command `?TOmicsVis::go_enrich` or reference page <https://benben-miao.github.io/TOmicsVis/reference/go_enrich.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::go_enrich
 ```
 
 #### 3.5.3 go_enrich_stat
+
 GO enrichment analysis and stat plot based on GO annotation results (None/Exist Reference Genome).
+
 ```{r go_enrich_stat, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(go_anno)
@@ -721,14 +804,17 @@ go_enrich_stat(
 )
 ```
 
-Get help using command `?TOmicsVis::go_enrich_stat` or reference page [https://benben-miao.github.io/TOmicsVis/reference/go_enrich_stat.html](https://benben-miao.github.io/TOmicsVis/reference/go_enrich_stat.html).
+Get help using command `?TOmicsVis::go_enrich_stat` or reference page <https://benben-miao.github.io/TOmicsVis/reference/go_enrich_stat.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::go_enrich_stat
 ```
 
 #### 3.5.4 go_enrich_bar
+
 GO enrichment analysis and bar plot based on GO annotation results (None/Exist Reference Genome).
+
 ```{r go_enrich_bar, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(go_anno)
@@ -753,14 +839,17 @@ go_enrich_bar(
 )
 ```
 
-Get help using command `?TOmicsVis::go_enrich_bar` or reference page [https://benben-miao.github.io/TOmicsVis/reference/go_enrich_bar.html](https://benben-miao.github.io/TOmicsVis/reference/go_enrich_bar.html).
+Get help using command `?TOmicsVis::go_enrich_bar` or reference page <https://benben-miao.github.io/TOmicsVis/reference/go_enrich_bar.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::go_enrich_bar
 ```
 
 #### 3.5.5 go_enrich_dot
+
 GO enrichment analysis and dot plot based on GO annotation results (None/Exist Reference Genome).
+
 ```{r go_enrich_dot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(go_anno)
@@ -785,14 +874,17 @@ go_enrich_dot(
 )
 ```
 
-Get help using command `?TOmicsVis::go_enrich_dot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/go_enrich_dot.html](https://benben-miao.github.io/TOmicsVis/reference/go_enrich_dot.html).
+Get help using command `?TOmicsVis::go_enrich_dot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/go_enrich_dot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::go_enrich_dot
 ```
 
 #### 3.5.6 go_enrich_tree
+
 GO enrichment analysis and tree plot based on GO annotation results (None/Exist Reference Genome).
+
 ```{r go_enrich_tree, warning=FALSE, fig.width=10.00, fig.height=6.18, eval=FALSE}
 # 1. Load example datasets
 data(go_anno)
@@ -819,13 +911,16 @@ go_enrich_tree(
 ```
 
 Get help using command `?TOmicsVis::go_enrich_tree`.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::go_enrich_tree
 ```
 
 #### 3.5.7 go_enrich_net
+
 GO enrichment analysis and net plot based on GO annotation results (None/Exist Reference Genome).
+
 ```{r go_enrich_net, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(go_anno)
@@ -849,14 +944,17 @@ go_enrich_net(
 )
 ```
 
-Get help using command `?TOmicsVis::go_enrich_net` or reference page [https://benben-miao.github.io/TOmicsVis/reference/go_enrich_net.html](https://benben-miao.github.io/TOmicsVis/reference/go_enrich_net.html).
+Get help using command `?TOmicsVis::go_enrich_net` or reference page <https://benben-miao.github.io/TOmicsVis/reference/go_enrich_net.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::go_enrich_net
 ```
 
 #### 3.5.8 kegg_enrich
+
 KEGG enrichment analysis based on KEGG annotation results (None/Exist Reference Genome).
+
 ```{r kegg_enrich, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(kegg_anno)
@@ -876,14 +974,17 @@ res <- kegg_enrich(
 head(res)
 ```
 
-Get help using command `?TOmicsVis::kegg_enrich` or reference page [https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich.html](https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich.html).
+Get help using command `?TOmicsVis::kegg_enrich` or reference page <https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::kegg_enrich
 ```
 
 #### 3.5.9 kegg_enrich_bar
+
 KEGG enrichment analysis and bar plot based on KEGG annotation results (None/Exist Reference Genome).
+
 ```{r kegg_enrich_bar, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(kegg_anno)
@@ -908,14 +1009,17 @@ kegg_enrich_bar(
 )
 ```
 
-Get help using command `?TOmicsVis::kegg_enrich_bar` or reference page [https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich_bar.html](https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich_bar.html).
+Get help using command `?TOmicsVis::kegg_enrich_bar` or reference page <https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich_bar.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::kegg_enrich_bar
 ```
 
 #### 3.5.10 kegg_enrich_dot
+
 KEGG enrichment analysis and dot plot based on KEGG annotation results (None/Exist Reference Genome).
+
 ```{r kegg_enrich_dot, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(kegg_anno)
@@ -940,14 +1044,17 @@ kegg_enrich_dot(
 )
 ```
 
-Get help using command `?TOmicsVis::kegg_enrich_dot` or reference page [https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich_dot.html](https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich_dot.html).
+Get help using command `?TOmicsVis::kegg_enrich_dot` or reference page <https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich_dot.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::kegg_enrich_dot
 ```
 
 #### 3.5.11 kegg_enrich_tree
+
 KEGG enrichment analysis and tree plot based on KEGG annotation results (None/Exist Reference Genome).
+
 ```{r kegg_enrich_tree, warning=FALSE, fig.width=10.00, fig.height=6.18, eval=FALSE}
 # 1. Load example datasets
 data(kegg_anno)
@@ -974,13 +1081,16 @@ kegg_enrich_tree(
 ```
 
 Get help using command `?TOmicsVis::kegg_enrich_tree`.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::kegg_enrich_tree
 ```
 
 #### 3.5.12 kegg_enrich_net
+
 KEGG enrichment analysis and net plot based on KEGG annotation results (None/Exist Reference Genome).
+
 ```{r kegg_enrich_net, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(kegg_anno)
@@ -1004,15 +1114,19 @@ kegg_enrich_net(
 )
 ```
 
-Get help using command `?TOmicsVis::kegg_enrich_net` or reference page [https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich_net.html](https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich_net.html).
+Get help using command `?TOmicsVis::kegg_enrich_net` or reference page <https://benben-miao.github.io/TOmicsVis/reference/kegg_enrich_net.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::kegg_enrich_net
 ```
 
 ### 3.6 Tables Operations
+
 #### 3.6.1 table_split
+
 Table split used for splitting a grouped column to multiple columns.
+
 ```{r table_split, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load table_split_data example datasets
 data(table_split_data)
@@ -1026,14 +1140,17 @@ res <- table_split(table_split_data,
 head(res)
 ```
 
-Get help using command `?TOmicsVis::table_split` or reference page [https://benben-miao.github.io/TOmicsVis/reference/table_split.html](https://benben-miao.github.io/TOmicsVis/reference/table_split.html).
+Get help using command `?TOmicsVis::table_split` or reference page <https://benben-miao.github.io/TOmicsVis/reference/table_split.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::table_split
 ```
 
 #### 3.6.2 table_merge
+
 Table merge used to merge multiple variables to on variable.
+
 ```{r table_merge, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(table_merge_data)
@@ -1050,14 +1167,17 @@ res <- table_merge(
 head(res)
 ```
 
-Get help using command `?TOmicsVis::table_merge` or reference page [https://benben-miao.github.io/TOmicsVis/reference/table_merge.html](https://benben-miao.github.io/TOmicsVis/reference/table_merge.html).
+Get help using command `?TOmicsVis::table_merge` or reference page <https://benben-miao.github.io/TOmicsVis/reference/table_merge.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::table_merge
 ```
 
 #### 3.6.3 table_filter
+
 Table filter used to filter row by column condition.
+
 ```{r table_filter, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(table_filter_data)
@@ -1070,14 +1190,17 @@ res <- table_filter(table_filter_data,
 head(res)
 ```
 
-Get help using command `?TOmicsVis::table_filter` or reference page [https://benben-miao.github.io/TOmicsVis/reference/table_filter.html](https://benben-miao.github.io/TOmicsVis/reference/table_filter.html).
+Get help using command `?TOmicsVis::table_filter` or reference page <https://benben-miao.github.io/TOmicsVis/reference/table_filter.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::table_filter
 ```
 
 #### 3.6.4 table_cross
+
 Table cross used to cross search and merge results in two tables.
+
 ```{r table_cross, warning=FALSE, fig.width=10.00, fig.height=6.18}
 # 1. Load example datasets
 data(table_cross_data1)
@@ -1097,7 +1220,8 @@ res <- table_cross(
 head(res)
 ```
 
-Get help using command `?TOmicsVis::table_cross` or reference page [https://benben-miao.github.io/TOmicsVis/reference/table_cross.html](https://benben-miao.github.io/TOmicsVis/reference/table_cross.html).
+Get help using command `?TOmicsVis::table_cross` or reference page <https://benben-miao.github.io/TOmicsVis/reference/table_cross.html>.
+
 ```{r}
 # Get help with command in R console.
 # ?TOmicsVis::table_cross
