--- a/vignettes/Tutorials.Rmd
+++ b/vignettes/Tutorials.Rmd
@@ -76,11 +76,11 @@ install.packages("TOmicsVis")
 
 #### 1.3 Articles and Courses
 
-**Videos Courses:** <https://space.bilibili.com/34105515/channel/series>
+**Video Courses:** <https://space.bilibili.com/34105515/channel/series>
 
-**Article Introduction:** [全解TOmicsVis完美应用于转录组可视化R包](https://mp.weixin.qq.com/s/g8sRcK_ExlsOFniMWEJnVQ)
+**Article Courses:** [全解TOmicsVis完美应用于转录组可视化R包](https://mp.weixin.qq.com/s/g8sRcK_ExlsOFniMWEJnVQ)
 
-**Article Courses:** [TOmicsVis 转录组学R代码分析及可视化视频](https://mp.weixin.qq.com/s/mVXJmHPAnC9J1-zMj7eG7g)
+**Resources Download:** <https://www.aliyundrive.com/s/tSp8FEohswW>
 
 #### 1.4 About and Authors
 
